7/16/09 #766, put snow patch in its own layer, so that it can be in front of debris
7/16/09 #766, add surface to snow patch, shown in green
7/16/09 #766, first step toward snow patch between terminus and ELA, cross-section only, shown in red.
7/16/09 #766, make calipers snap and show value on when ice thickness is zero, otherwise show "?"
7/16/09 #1734, move "Glacier Evolution State" dialog to Developer menu
7/16/09 #1733, fewer decimal places (1) for climate controls and glacial budget meter
7/16/09 revert fix for #999, it made things worse
# 2.01.02 (33295) Jul 14, 2009
7/14/09 enabled fix for #999
fix for #999, bump in glacier length vs time (doesn't appear to fix it)
# 2.01.01 (33293) Jul 14, 2009
7/14/09 publish version before making #999 fix, for comparison
# 2.01.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 2.00.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
3/12/09 #1453, remove unused strings from English localization file
# 2.00.01 (28792) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 2.00.00 (27161) 01-12-2009
# 1.00.12 (26751)
12/18/08 - #998, autoscale y-axis of the "Glacier Length vs Time" graph, set min autoscale range to 0-3km
12/18/08 - #999, attempt to smooth out bump in glacier length vs time curve, still problematic between elax_x2 and elax_x1
> fix for glacier that retreat too quickly near the headwall
12/18/08 - #1051, add model fix for glacier retreating too fast near headwall (q_retreat_limit)
12/18/08 - modify variables in model.txt to match Java code (elax -> qelax, dqela -> delta_qela)
12/18/08 - new model.txt to address #1051 and #999
# 1.00.11 (26511)
> fix for zero-length glacier that advances too slowly near the headwall
12/2/08 - #727, set q_advance_limit to constant -2, remove q_advance_limit from debug dialog
# 1.00.10 (26488)
12/2/08 - #727, add deltaLength to debug display